# snowflake_app

./: pyproject.toml  streamlit_app.py
.streamlit/: config.toml  secrets.toml
